--- a/source/_posts/【JS系列】03——浏览器通知.md
+++ b/source/_posts/【JS系列】03——浏览器通知.md
@@ -63,7 +63,10 @@ tags:
     ```
 
 ## Note
-    目前Chrome 62版本以后非Https链接地址不允许获取通知权限；Firefox允许获取通知权限。
+  
+    1. 目前Chrome 62版本以后非Https链接地址不允许获取通知权限；Firefox允许获取通知权限。
+    2. requireInteraction: 保持通知不自动关闭，默认值为false，通知会在三四秒之后自动关闭。在firefox中设置为true的情况下，通知依然会自动关闭，未解决。
+    https://stackoverflow.com/questions/46518180/desktop-notification-requireinteraction-true-not-working
 
 参考链接：
     https://www.chromestatus.com/feature/5759967025954816
